feat(clone): a copy declares the artifacts it did not carry, and says how to build them
A clone has skipped `cache/`, `venvs/`, `tools/` and `npm/` since the first
clone, for reasons that are still right, and has never said so in a form
anything could act on. The copy simply held entry points that resolved to
nothing, and the first thing to notice was the kernel: ARTI-01 measured two
dangling shims on all five probe homes, and the operator's project home has
seven more of the generated kind. `bad interpreter` names no home, no
artifact and no command.

Three changes, and only these three:

* the copy gets an `artifacts.lock.toml` naming what it did not carry, so
  those artifacts list as `declared-only` instead of vanishing;
* every entry point whose backing tree is absent becomes a cold shim that
  runs, names the artifact, and prints `skill-manager build <id>` /
  `skt build <id>`. It exits 86, not 127: the command WAS found;
* with `lazy_artifacts` — on for a project or worktree home, off for the
  operator root — the copy also defers the virtualenvs INSIDE units, which
  is where the bytes are.

The membership rule for that last one is a `pyvenv.cfg` marker and not a
directory name. Rederivable warns that `build`, `target` and `venv` are
ordinary words used by convention, safe for a reconcile and not for a
byte-for-byte copy; an authored `build/` exists, an authored `pyvenv.cfg`
does not. `node_modules` is deliberately still carried.

`home verify` now distinguishes three states rather than two. A
declared-and-not-built entry point is reported and never counted, because
every clone ships them and a gate that reports a normal state as a failure
is a gate somebody turns off. Both conditions are required — the home must
declare `lazy_artifacts` AND its ledger must name the artifact — so an
unresolved reference nothing ever claimed to produce is still a failure, and
the operator root excuses nothing.

The drift baseline is untouched by construction: `walkPlain` alre